fixing button color on mobile

--- a/src/css/bustime.sass
+++ b/src/css/bustime.sass
@@ -83,6 +83,7 @@ button, .button
   font-size: 1em
   vertical-align: middle
   text-decoration: none
+  color: currentColor
   &:hover
     cursor: pointer
     text-decoration: underline
